Possibilité de faire differentes mutations grace à notre plugin maven.